# argentic

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  FINAL_STATUS.md  PROVIDER_REFACTORING_SUMMARY.md  README.md  RELEASE.md  RUN_GEMMA.md  TEST_GEMMA_JAX.md  VISUAL_AGENT_VLLM_STATUS.md  VISUAL_EMBEDDINGS_IMPLEMENTATION.md  VLLM_FIXES_COMPLETE.md  VLLM_SERVER_ISSUE.md  VLLM_SETUP.md  VRAM_SOLUTION.md  cli_client.py  config.yaml  debug_gemma3n.py  install.sh  investigate_model.py  main.py  mkdocs.yml  pyproject.toml  pytest.ini  run_gemma.sh  setup_gemma.sh  start.sh  test_vllm_direct.py  test_vllm_native.py  test_vllm_offline.py
.claude/: ARCHITECTURE.md  QUICK_REFERENCE.md
.claudecode/: context.md
.github/workflows/: auto-publish.yml  docs-pages.yml  publish-pypi.yml  python-app.yml  web-tests.yml
argentic/: __init__.py  __main__.py
argentic-skill/: SKILL.md
core/: decorators.py  llm.py  messager.py  rag.py
docker/: README.md
docs/: LLM_PROVIDERS_GUIDE.md  VISUAL_AGENT_GUIDE.md  index.md  messaging-configuration.md  mkdocs.yml
docs/api/: drivers.md
docs/source/: index.rst
docs/stylesheets/: nord-theme.css
examples/: config_gemini.yaml  config_google_gemini.yaml  config_ollama.yaml  config_visual_gemma_jax.yaml  config_visual_gemma_webrtc.yaml  import_example.py  multi_agent_example.py  single_agent_example.py  test_vllm_simple.py  visual_agent_embedding_example.py  visual_agent_frame_sources.py  visual_agent_gemini_test.py  visual_agent_gemma_jax.py  visual_agent_gemma_webrtc.py  visual_agent_simple_test.py  visual_agent_vllm.py  vllm_gemma3n_test.py
handlers/: add_info_handler.py  ask_question_handler.py  forget_info_handler.py
scripts/: README.md  download_models.py  start_vllm_gemma3n.sh
src/: __init__.py  __main__.py  cli_client.py  main.py
src/argentic/: __init__.py  cli_client.py
src/argentic/core/: __init__.py  decorators.py  logger.py
src/argentic/services/: rag_tool_service.py
src/argentic/tools/: __init__.py
src/core/: __init__.py  agent.py  client.py  decorators.py  llm.py  logger.py  messager.py  rag.py  tool_base.py  tool_manager.py
src/core/agent/: agent.py
src/core/llm/: README.md  llm_factory.py
src/core/messager/: messager.py
src/core/protocol/: message.py  task.py  task_protocol.py  tool.py
src/core/tools/: tool_base.py  tool_manager.py
src/handlers/: add_info_handler.py  ask_question_handler.py  forget_info_handler.py  register_tool_handler.py  status_request_handler.py
src/services/: __init__.py  rag_tool_service.py
src/tools/: knowledge_base_tool.py
src/tools/RAG/: knowledge_base_tool.py  rag.py  rag_config.yaml
tests/: conftest.py  validate_visual_agent.py
tests/core/messager/: README.md  docker-compose.yml  e2e_README.md  test_messager.py  test_messager_e2e.py  test_messager_integration.py
tests/e2e/: test_visual_agent_e2e.py
tests/integration/: test_multi_agent_workflow.py  test_visual_agent_integration.py  test_zeromq_integration.py  test_zeromq_with_llm.py
tests/unit/: test_agent.py  test_agent_state_mode.py  test_frame_sources.py  test_gemma_provider.py  test_supervisor.py  test_video_file_frame_source.py  test_visual_agent.py  test_visual_agent_frame_sources.py  test_webrtc_driver.py  test_webrtc_frame_source.py
tmp/: test_no_skip.json  test_request.json
tools/: download_gemma_models.sh
web/: .gitignore  CODE_GENERATION.md  DESIGN_GUIDE.md  README.md  TESTING.md
web/client/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  playwright.config.ts
web/client/e2e/: agents.spec.ts  dashboard.spec.ts  navigation.spec.ts
web/server/: README.md  generate_models.sh  main.py  pyproject.toml  pytest.ini
web/server/app/: __init__.py  main.py
web/server/app/core/: config.py  dependencies.py
web/server/app/models/: __init__.py  agent.py  llm.py  messaging.py  supervisor.py  tool.py  workflow.py
web/server/app/routes/: __init__.py  agents.py  config.py  supervisors.py  websocket.py  workflows.py
web/server/app/services/: __init__.py  agent_service.py  runtime_service.py  supervisor_service.py  workflow_service.py
web/server/scripts/: generate_typescript_models.py  generate_typescript_models_simple.py  update_models.sh
web/server/tests/: __init__.py  conftest.py
web/server/tests/integration/: test_api.py
web/server/tests/unit/: test_models.py  test_services.py  test_websocket.py
(+110 files in other folders)
