[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Iurii <angkira0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.8"
chromadb = "^1.0.7"
langchain-ollama = "^0.3.2"
langchain-community = "^0.3.23"
langchain = "^0.3.24"
sentence-transformers = "^4.1.0"
pyyaml = "^6.0.2"
paho-mqtt = "^2.1.0"
langchain-huggingface = "^0.1.2"
llama-cpp-python = "0.3.8"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
