[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [{ name = "Iurii", email = "angkira0@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "ai",
    "ai agent",
    "rag",
    "ollama",
    "langchain",
    "sentence-transformers",
    "chromadb",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ollama>=0.4.8,<0.5",
    "chromadb>=1.0.7,<2",
    "langchain-ollama>=0.3.2,<0.4",
    "langchain-community>=0.3.23,<0.4",
    "langchain>=0.3.24,<0.4",
    "sentence-transformers>=4.1.0,<5",
    "pyyaml>=6.0.2,<7",
    "paho-mqtt>=2.1.0,<3",
    "langchain-huggingface>=0.1.2,<0.2",
    "llama-cpp-python==0.3.8",
    "requests>=2.31.0,<3",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "isort>=6.0.1,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
